# ezmathpy

./: README.md  pyproject.toml  randomfile.txt  setup.py
.github/workflows/: publish.yml
ezmathpy/: __init__.py  ezmathpy.py
pyeasycalc/: __init__.py
