[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeasycalc"
version = "0.2.0"
description = "A simple Python calculation package"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yourusername/pyeasycalc"
Repository = "https://github.com/yourusername/pyeasycalc"
