[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeasycalc"
version = "0.2.2"
description = "A simple Python calculation package"
authors = [
    { name = "aadidev11", email = "axdtutorials@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/aadidev11/pyeasycalc"
Repository = "https://github.com/aadidev11/pyeasycalc"
